<!--
  ~ Copyright 2019-2021 David Blanc
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">HttpMocker Demo</string>
    <string name="mocking_state">Mocking state</string>
    <string name="state_disabled">Disabled</string>
    <string name="state_enabled">Enabled</string>
    <string name="state_mixed">Mixed</string>
    <string name="state_record">Record</string>
    <string name="disabled_description">Interceptor is disabled. Network calls can go through (complete repo list and details).</string>
    <string name="enabled_description">Network calls are intercepted. List call with titles is mocked  (shortened list), details are not (details are in error).</string>
    <string name="mixed_description">Interceptor is in mixed mode. List call with titles is mocked (shortened list), details are retrieved from a real call.</string>
    <string name="record_description">Calls are recorded in the device\'s Download directory</string>
    <string name="call_service_button">Call service</string>
    <string name="title_activity_compose">ComposeActivity</string>
</resources>
