<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 David Blanc
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

    <TextView
            android:id="@+id/tvState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mocking_state"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"
    />

    <RadioGroup
            android:id="@+id/radioState"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/tvState"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">
        <RadioButton android:id="@+id/stateDisabled"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
                     android:text="@string/state_disabled"/>
        <RadioButton android:id="@+id/stateEnabled"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/state_enabled"/>
        <RadioButton android:id="@+id/stateMixed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/state_mixed"/>
        <RadioButton android:id="@+id/stateRecord"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/state_record"/>
    </RadioGroup>

    <TextView
            android:id="@+id/tvDirectory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_directory_info"
            app:layout_constraintLeft_toLeftOf="@id/radioState"
            app:layout_constraintTop_toBottomOf="@+id/radioState"
            android:enabled="false"
            android:layout_margin="8dp"
    />

    <Button android:id="@+id/btnCall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvDirectory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/call_service_button"
    />

    <android.support.v7.widget.RecyclerView
            android:id="@+id/results"
            android:layout_width="0dp" android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCall"
            app:layout_constraintBottom_toBottomOf="parent"
    />
</android.support.constraint.ConstraintLayout>